--- a/MauiToDoSqlite/Platforms/Windows/App.xaml
+++ b/MauiToDoSqlite/Platforms/Windows/App.xaml
@@ -1,8 +1,8 @@
 ﻿<maui:MauiWinUIApplication
-    x:Class="MauiToDoSqlite.WinUI.App"
+    x:Class="MauiBudgetApp.WinUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:maui="using:Microsoft.Maui"
-    xmlns:local="using:MauiToDoSqlite.WinUI">
+    xmlns:local="using:MauiBudgetApp.WinUI">
 
 </maui:MauiWinUIApplication>
