Fixed the Amount label text to now display Amount rather than Notes

--- a/MauiBudgetApp/Views/PayItemPage.xaml
+++ b/MauiBudgetApp/Views/PayItemPage.xaml
@@ -16,7 +16,7 @@
         <StackLayout Margin="20" Spacing="10" VerticalOptions="StartAndExpand">
             <Label Text="Name"/>
             <Entry Text="{Binding Name}"/>
-            <Label Text="Notes"/>
+            <Label Text="Amount"/>
             <Editor Text="{Binding Amount}" Keyboard="Numeric"/>
 
             <StackLayout Orientation="Vertical">
