--- a/MauiBudgetApp/Views/PayItemListPage.xaml
+++ b/MauiBudgetApp/Views/PayItemListPage.xaml
@@ -16,12 +16,14 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="34" />
                     <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
                 </Grid.RowDefinitions>
-                <BoxView Color="LightGray"  CornerRadius="10" Grid.RowSpan="3"/>
+                <BoxView Color="LightGray"  CornerRadius="10" Grid.RowSpan="4"/>
 
                 <Label x:Name="lblInitialText" Grid.Row="0" Margin="10,10" FontSize="Medium" HorizontalOptions="Start"/>
-                <Label x:Name="lblMoneyLeft" Grid.Row="1" Margin="10,0" FontSize="Large" HorizontalOptions="End"/>
-                <ProgressBar ProgressColor="GreenYellow" x:Name="progressMoneyLeft" Grid.Row="2" Margin="10,10"/>
+                <Label x:Name="lblMoneyOutOf" Grid.Row="1" Margin="10,0" FontSize="Large" HorizontalOptions="End"/>
+                <ProgressBar ProgressColor="DodgerBlue" x:Name="progressMoneyLeft" Grid.Row="2" Margin="10,10"/>
+                <Label x:Name="lblMoneyLeft" Grid.Row="3" Margin="10,0"/>
             </Grid>
             <StackLayout Orientation="Horizontal" Margin="10">
                 <Label Text="Income Group" HorizontalOptions="StartAndExpand"/>
