--- a/MauiBudgetApp/Views/PayItemListPage.xaml
+++ b/MauiBudgetApp/Views/PayItemListPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiBudgetApp.Views.PayItemListPage"
              xmlns:models="clr-namespace:MauiBudgetApp.Models"
+             xmlns:local="clr-namespace:MauiBudgetApp"
              Title="Budget App">
     <ContentPage.ToolbarItems>
         <ToolbarItem Clicked="OnSettingsClick" IconImageSource="cog.png"/>
@@ -19,21 +20,30 @@
                     <RowDefinition Height="30" />
                 </Grid.RowDefinitions>
                 <BoxView Color="LightGray"  CornerRadius="10" Grid.RowSpan="4"/>
-
-                <Label x:Name="lblInitialText" Grid.Row="0" Margin="10,10" FontSize="Medium" HorizontalOptions="Start"/>
-                <Label x:Name="lblMoneyOutOf" Grid.Row="1" Margin="10,0" FontSize="Large" HorizontalOptions="End"/>
+                <FlexLayout Wrap="Wrap" Grid.Row="0" Margin="10,10" IsVisible="False">
+                    <Label Text="Based on your income and expenses you are using " TextColor="Black" FontSize="Medium"/>
+                    <Label x:Name="txtExpenseTotal" FontAttributes="Bold" TextColor="Black" FontSize="Medium"/>
+                    <Label Text=" of your budget." FontSize="Medium"/>
+                </FlexLayout>
+                <Label x:Name="lblInitialText" Grid.Row="0" Margin="10,10" FontSize="Medium" HorizontalOptions="Start" TextColor="Black" IsVisible="True"/>
+                <Label x:Name="lblMoneyOutOf" Grid.Row="1" Margin="10,0" FontSize="Large" FontAttributes="Bold" HorizontalOptions="End" TextColor="Black"/>
                 <ProgressBar ProgressColor="DodgerBlue" x:Name="progressMoneyLeft" Grid.Row="2" Margin="10,10"/>
-                <Label x:Name="lblMoneyLeft" Grid.Row="3" Margin="10,0"/>
+                <StackLayout Orientation="Horizontal" Grid.Row="3" Margin="10,0">
+                    <Label Text="You have " Margin="0" TextColor="Black"/>
+                    <Label Text="£2216.99" Margin="0" FontAttributes="Bold" TextColor="Black"/>
+                    <Label Text=" left of your budget" Margin="0" TextColor="Black"/>
+                </StackLayout>
+                <Label x:Name="lblMoneyLeft" Grid.Row="3" Margin="10,0" TextColor="Black" IsVisible="False"/>
             </Grid>
-            <StackLayout Orientation="Horizontal" Margin="10">
+            <StackLayout Orientation="Horizontal" Margin="0,10">
                 <Label Text="Income Group" HorizontalOptions="StartAndExpand" FontSize="Medium"/>
                 <Label x:Name="txtTotalIncome" HorizontalOptions="End" FontSize="Medium" FontAttributes="Bold"/>
             </StackLayout>
-            <ListView x:Name="incomeListView" Margin="5" ItemSelected="OnIncomeItemSelected" HeightRequest="100" VerticalOptions="Start">
+            <ListView x:Name="incomeListView" Margin="0" ItemSelected="OnIncomeItemSelected" HeightRequest="100" VerticalOptions="Start">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="models:PayItem">
                         <ViewCell>
-                            <StackLayout Margin="20,0,0,0" HorizontalOptions="FillAndExpand" Orientation="Horizontal">
+                            <StackLayout Margin="0" HorizontalOptions="FillAndExpand" Orientation="Horizontal">
                                 <Label HorizontalOptions="StartAndExpand" Text="{Binding Name}" FontSize="Small" VerticalOptions="Center"/>
                                 <Label HorizontalOptions="End" Text="{Binding AmountText}" FontSize="Small" TextColor="Grey" VerticalOptions="Center"/>
                             </StackLayout>
@@ -42,12 +52,12 @@
                 </ListView.ItemTemplate>
             </ListView>
 
-            <StackLayout Orientation="Horizontal" Margin="10">
+            <StackLayout Orientation="Horizontal" Margin="0,10">
                 <Label Text="Expense Group" HorizontalOptions="StartAndExpand" FontSize="Medium"/>
                 <Label x:Name="txtTotalExpense" HorizontalOptions="End" FontSize="Medium" FontAttributes="Bold"/>
             </StackLayout>
             
-            <ListView x:Name="expenseListView" Margin="20" ItemSelected="OnExpenseItemSelected">
+            <ListView x:Name="expenseListView" Margin="0" ItemSelected="OnExpenseItemSelected">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="models:PayItem">
                         <ViewCell>
