--- a/MauiBudgetApp/Views/PayItemListPage.xaml
+++ b/MauiBudgetApp/Views/PayItemListPage.xaml
@@ -6,13 +6,13 @@
              xmlns:local="clr-namespace:MauiBudgetApp"
              Title="Budget App">
     <ContentPage.ToolbarItems>
-        <ToolbarItem Clicked="OnSettingsClick" IconImageSource="cog.png"/>
+        <!--<ToolbarItem Clicked="OnSettingsClick" IconImageSource="cog.png"/>-->
         <ToolbarItem Clicked="OnItemAdded" IconImageSource="plus.png"/>
 
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <StackLayout Orientation="Vertical" Margin="10">
-            <Grid>
+        <StackLayout Orientation="Vertical" Margin="0">
+            <Grid Margin="10">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="34" />
@@ -21,25 +21,31 @@
                 </Grid.RowDefinitions>
                 <BoxView Color="LightGray"  CornerRadius="10" Grid.RowSpan="4"/>
                 <FlexLayout Wrap="Wrap" Grid.Row="0" Margin="10,10" IsVisible="False">
-                    <Label Text="Based on your income and expenses you are using " TextColor="Black" FontSize="Medium"/>
-                    <Label x:Name="txtExpenseTotal" FontAttributes="Bold" TextColor="Black" FontSize="Medium"/>
-                    <Label Text=" of your budget." FontSize="Medium"/>
+                    <Label x:Name="lblDashboardStart" Text="Based on your income and expenses you are using " TextColor="Black" FontSize="Medium"/>
+                    <Label x:Name="lblDashboardAmount" FontAttributes="Bold" TextColor="Black" FontSize="Medium"/>
+                    <Label x:Name="lblDashboardEnd" Text=" of your budget." FontSize="Medium"/>
                 </FlexLayout>
                 <Label x:Name="lblInitialText" Grid.Row="0" Margin="10,10" FontSize="Medium" HorizontalOptions="Start" TextColor="Black" IsVisible="True"/>
                 <Label x:Name="lblMoneyOutOf" Grid.Row="1" Margin="10,0" FontSize="Large" FontAttributes="Bold" HorizontalOptions="End" TextColor="Black"/>
                 <ProgressBar ProgressColor="DodgerBlue" x:Name="progressMoneyLeft" Grid.Row="2" Margin="10,10"/>
                 <StackLayout Orientation="Horizontal" Grid.Row="3" Margin="10,0">
-                    <Label Text="You have " Margin="0" TextColor="Black"/>
-                    <Label Text="£2216.99" Margin="0" FontAttributes="Bold" TextColor="Black"/>
-                    <Label Text=" left of your budget" Margin="0" TextColor="Black"/>
+                    <Label x:Name="lblMoneyLeftStart" Margin="0" TextColor="Black"/>
+                    <Label x:Name="lblMoneyLeftAmount" Margin="0" FontAttributes="Bold" TextColor="Black"/>
+                    <Label x:Name="lblMoneyLeftEnd" Margin="0" TextColor="Black"/>
                 </StackLayout>
                 <Label x:Name="lblMoneyLeft" Grid.Row="3" Margin="10,0" TextColor="Black" IsVisible="False"/>
             </Grid>
-            <StackLayout Orientation="Horizontal" Margin="0,10">
-                <Label Text="Income Group" HorizontalOptions="StartAndExpand" FontSize="Medium"/>
-                <Label x:Name="txtTotalIncome" HorizontalOptions="End" FontSize="Medium" FontAttributes="Bold"/>
-            </StackLayout>
-            <ListView x:Name="incomeListView" Margin="0" ItemSelected="OnIncomeItemSelected" HeightRequest="100" VerticalOptions="Start">
+            <Grid Margin="10,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                </Grid.RowDefinitions>
+                <BoxView Color="#3366ff" CornerRadius="10" Grid.RowSpan="1"/>
+                <StackLayout Orientation="Horizontal" Margin="0" Padding="10" Grid.Row="0" VerticalOptions="Center">
+                    <Label Text="Income Group" HorizontalOptions="StartAndExpand" FontSize="Medium" TextColor="White"/>
+                    <Label x:Name="txtTotalIncome" HorizontalOptions="End" FontSize="Medium" FontAttributes="Bold" TextColor="White"/>
+                </StackLayout>
+            </Grid>
+            <ListView x:Name="incomeListView" Margin="20,0" ItemSelected="OnIncomeItemSelected" HeightRequest="100" VerticalOptions="Start">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="models:PayItem">
                         <ViewCell>
@@ -52,12 +58,17 @@
                 </ListView.ItemTemplate>
             </ListView>
 
-            <StackLayout Orientation="Horizontal" Margin="0,10">
-                <Label Text="Expense Group" HorizontalOptions="StartAndExpand" FontSize="Medium"/>
-                <Label x:Name="txtTotalExpense" HorizontalOptions="End" FontSize="Medium" FontAttributes="Bold"/>
-            </StackLayout>
-            
-            <ListView x:Name="expenseListView" Margin="0" ItemSelected="OnExpenseItemSelected">
+            <Grid Margin="10,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                </Grid.RowDefinitions>
+                <BoxView Color="#3366ff" CornerRadius="10" Grid.RowSpan="1"/>
+                <StackLayout Orientation="Horizontal" Padding="10" Grid.Row="0">
+                    <Label Text="Expense Group" HorizontalOptions="StartAndExpand" FontSize="Medium" TextColor="White"/>
+                    <Label x:Name="txtTotalExpense" HorizontalOptions="End" FontSize="Medium" FontAttributes="Bold" TextColor="White"/>
+                </StackLayout>
+            </Grid>
+            <ListView x:Name="expenseListView" Margin="20,0" ItemSelected="OnExpenseItemSelected">
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="models:PayItem">
                         <ViewCell>
