Fixed the delete item label showing up when adding new item

--- a/MauiBudgetApp/Views/PayItemPage.xaml
+++ b/MauiBudgetApp/Views/PayItemPage.xaml
@@ -33,7 +33,8 @@
                 <Label Text="Delete item?" 
                        TextColor="Red" 
                        VerticalOptions="Center"
-                       HorizontalOptions="StartAndExpand"/>
+                       HorizontalOptions="StartAndExpand"
+                       IsVisible="{Binding IsVisible}"/>
                 <ImageButton Clicked="OnDeleteClicked" 
                              Source="trash.png" 
                              IsVisible="{Binding IsVisible}" 
