--- a/MauiBudgetApp/Views/SettingsView.xaml
+++ b/MauiBudgetApp/Views/SettingsView.xaml
@@ -9,16 +9,20 @@
         </ToolbarItem>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <Grid Margin="20">
+        <Grid Margin="10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="50"/>
             </Grid.RowDefinitions>
             <StackLayout Grid.Row="0">
                 <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                    </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="50"/>
+                        <ColumnDefinition Width="100"/>
                     </Grid.ColumnDefinitions>
                     <Label Text="Reset 'Paid' on day of the month"
                            HorizontalOptions="Start"
@@ -34,6 +38,21 @@
                            HorizontalOptions="EndAndExpand"
                            FontSize="Medium"
                        Grid.Column="1"/>
+                    <Label Grid.Row="1"
+                           Grid.Column="0"
+                           FontSize="Medium"
+                           HorizontalOptions="Start"
+                           VerticalTextAlignment="Center"
+                           Text="Date of next reset"
+                           />
+                    <Label Grid.Row="1"
+                           Grid.Column="1"
+                           FontSize="Medium"
+                           BackgroundColor="Red"
+                           HorizontalOptions="EndAndExpand"
+                           VerticalTextAlignment="Center"
+                           x:Name="lblNextResetDate"
+                               />
                 </Grid>
             </StackLayout>
             <Button Text="Clear Settings"
