Fix for the reset day not taking day less than current day of the month

--- a/MauiBudgetApp/Views/SettingsView.xaml
+++ b/MauiBudgetApp/Views/SettingsView.xaml
@@ -48,7 +48,6 @@
                     <Label Grid.Row="1"
                            Grid.Column="1"
                            FontSize="Medium"
-                           BackgroundColor="Red"
                            HorizontalOptions="EndAndExpand"
                            VerticalTextAlignment="Center"
                            x:Name="lblNextResetDate"
@@ -59,7 +58,7 @@
                     VerticalOptions="Center"
                     HorizontalOptions="Center"
                     BackgroundColor="Red"
-                    TextColor="Black"
+                    TextColor="White"
                     FontSize="Medium"
                     FontAttributes="Bold"
                     x:Name="btnClearSettings"
