--- a/MauiBudgetApp/Views/PayItemPage.xaml
+++ b/MauiBudgetApp/Views/PayItemPage.xaml
@@ -3,47 +3,54 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiBudgetApp.Views.PayItemPage"
              xmlns:models="clr-namespace:MauiBudgetApp.Models"
+             xmlns:views="clr-namespace:MauiBudgetApp.Views"
              x:DataType="models:PayItem"
              Title="{Binding Name}"
-             NavigatedFrom="OnCancelClicked"
-             >
+             NavigationPage.HasNavigationBar="True"
+             ToolTipProperties.Text="">
     <ContentPage.ToolbarItems>
-        <ToolbarItem Clicked="OnCancelClicked" Text="Back" IconImageSource="back.png" />
-        <ToolbarItem Clicked="OnSaveClicked" Text="Save" IconImageSource="diskette.png">
-        </ToolbarItem>
+        <ToolbarItem Clicked="OnSaveClicked" Text="Save" IconImageSource="diskette.png"/>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
-        <StackLayout Margin="20" Spacing="10" VerticalOptions="StartAndExpand">
-            <Label Text="Name"/>
-            <Entry Text="{Binding Name}"/>
-            <Label Text="Amount"/>
-            <Editor Text="{Binding Amount}" Keyboard="Numeric"/>
+        <Grid Margin="15">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="30"/>
+            </Grid.RowDefinitions>
+            <StackLayout Spacing="10" VerticalOptions="StartAndExpand" Grid.Row="0">
+                <Label Text="Name"/>
+                <Editor x:Name="txtName"
+                    Text="{Binding Name}"
+                    TextChanged="txtName_TextChanged"/>
+                <Label Text="Amount"/>
+                <Editor Text="{Binding Amount}" Keyboard="Numeric"/>
 
-            <StackLayout Orientation="Vertical">
-                <Label Margin="0,10"
+                <StackLayout Orientation="Vertical">
+                    <Label Margin="0,10"
                        HorizontalOptions="StartAndExpand"
                        Text="Is this an income?" IsVisible="False"/>
-                <Switch HorizontalOptions="EndAndExpand" IsToggled="{Binding IsIncome}" x:Name="switchIncome" IsVisible="False"/>
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="Has it been paid yet?" Margin="0,10" HorizontalOptions="StartAndExpand" IsVisible="{Binding IsExpense}"/>
-                    <Switch HorizontalOptions="EndAndExpand" IsToggled="{Binding IsPaid}" IsVisible="{Binding IsExpense}" x:Name="switchPaid"/>
+                    <Switch HorizontalOptions="EndAndExpand" IsToggled="{Binding IsIncome}" x:Name="switchIncome" IsVisible="False"/>
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="Has it been paid yet?" Margin="0,10" HorizontalOptions="StartAndExpand" IsVisible="{Binding IsExpense}"/>
+                        <Switch HorizontalOptions="EndAndExpand" IsToggled="{Binding IsPaid}" IsVisible="{Binding IsExpense}" x:Name="switchPaid"/>
+                    </StackLayout>
                 </StackLayout>
-            </StackLayout>
-            <StackLayout Orientation="Horizontal" VerticalOptions="Center">
-                <Label Text="Delete item?" 
+                <StackLayout Orientation="Horizontal" VerticalOptions="Center">
+                    <Label Text="Delete item?" 
                        TextColor="Red" 
                        VerticalOptions="Center"
                        HorizontalOptions="StartAndExpand"
                        IsVisible="{Binding IsVisible}"/>
-                <ImageButton Clicked="OnDeleteClicked" 
+                    <ImageButton Clicked="OnDeleteClicked" 
                              Source="trash.png" 
                              IsVisible="{Binding IsVisible}" 
                              WidthRequest="50" 
                              HeightRequest="50"
                              HorizontalOptions="End"
                              VerticalOptions="Center"/>
+                </StackLayout>
             </StackLayout>
-            
-        </StackLayout>
+            <Label Text="Info: Clicking back button discards the page." FontSize="12" Grid.Row="1"/>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
